fix: API URLs for docs (#599)
* fix: API URLs for docs

* fix: merge issue
